--- a/.devcontainer/connections.toml
+++ b/.devcontainer/connections.toml
@@ -2,9 +2,9 @@
 #export SNOWFLAKE_DEFAULT_CONNECTION_NAME="default"
 
 [default]
-account = "myaccount"
-user = "myuser"
-password = "mypassword"
+account = "gsa75567"
+user = "danprovan"
+password = "JqegfNy@tg@Y58cL"
 role = "HOL_ROLE"
 warehouse = "HOL_WH"
 database = "HOL_DB"
